Implement hardhat unit test github-action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,17 @@
-name: unit-test
+name: unit test
 on: [push]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Hardhat unit test
+    name: npx hardhat test
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Environment
       uses: actions/setup-node@v3
+    - name: Install github-action configuration
+      run: cp .github/hardhat.config.ts .
     - name: Test
       uses: ambersun1234/hardhat-test-action@v1
       with:
