--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "prettier": "prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
+    "lint": "prettier --list-different --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
+    "compile": "hardhat compile",
+    "test": "hardhat test"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
-    "hardhat": "^2.22.3"
+    "hardhat": "^2.22.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint-community": "^4.0.0",
+    "solhint-plugin-prettier": "^0.1.0"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^0.37.1",
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "solhint": "^4.5.4"
   }
 }
