add npm run lint command

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hardhat-project",
   "scripts": {
     "prettier": "prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
-    "lint": "prettier --list-different --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
+    "lint": "solhint contracts/**/*.sol",
     "compile": "hardhat compile",
     "test": "hardhat test"
   },
